fix double border on pulse page

--- a/github-dark.css
+++ b/github-dark.css
@@ -5176,7 +5176,7 @@
     border: 1px solid #444 !important;
     border-bottom: 1px solid #343434 !important;
   }
-  .summary-stats, .follow-list .follow-list-item {
+  .follow-list .follow-list-item {
     border-bottom: 1px solid #343434 !important;
   }
   .simple-conversation-list > li, .site-footer, .blame .section-first td,
